<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="app_username"
        android:title="@string/app_username"
        android:summary="@string/settings_username"
    />
    <EditTextPreference
        android:key="app_password"
        android:title="@string/app_password"
        android:summary="@string/settings_password"
        android:inputType="textPassword"
    />
    <EditTextPreference
        android:key="http_username"
        android:title="@string/http_username"
        android:summary="@string/settings_username"
    />
    <EditTextPreference
        android:key="http_password"
        android:title="@string/http_password"
        android:summary="@string/settings_password"
        android:inputType="textPassword"
    />
    <EditTextPreference
        android:key="url"
        android:title="@string/url"
        android:summary="@string/settings_url"
    />
    <EditTextPreference
        android:key="monthstosync"
        android:title="@string/monthstosync"
        android:summary="@string/monthstosync_desc"
    />
    <EditTextPreference
        android:key="workhoursfrom"
        android:title="@string/workhoursfrom"
        android:summary="@string/workhoursfrom_desc"
    />
    <EditTextPreference
        android:key="workhoursto"
        android:title="@string/workhoursto"
        android:summary="@string/workhoursto_desc"
    />
</PreferenceScreen>
