<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent" >

<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
 >

  <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_gravity="center_horizontal"
    android:layout_weight="1">

  <TextView 
    android:id="@+id/p_tv"
    android:text="@string/participants"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
  />

  <ListView 
    android:id="@+id/participants_lv" 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
  />

  </LinearLayout>

  <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_gravity="center_horizontal"
    android:layout_weight="1">
  <TextView 
    android:id="@+id/e_tv"
    android:text="@string/externals"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
  />
  <EditText 
    android:id="@+id/e_et"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:minLines="3"
    android:scrollbars="vertical"
    android:layout_weight="1"
  />
  </LinearLayout>

  <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_gravity="center_horizontal"
    android:layout_weight="1">

  <TextView 
    android:id="@+id/selected_participants_tv"
    android:text="@string/selected_participants"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
  />

  <ListView 
    android:id="@+id/selected_participants_lv"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
  />

  </LinearLayout>
</LinearLayout>
</RelativeLayout>
